[package]
name = "follow-up-github-issue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.24"
csv = "1.2.2"
dotenv = "0.15.0"
github-flows = "0.5.1"
schedule-flows = "0.2.2"
sendgrid-flows = "0.1.2"
slack-flows = "0.3.4"
tokio_wasi = { version = "1.25.1", features = ["full"] }
